fix lowercase on iOS

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,7 +21,7 @@
 
 @media only screen and (max-width: 600px) {
   .nav-butto-label {
-
+    text-transform: uppercase;
   }
 }
 
